Update iaac: fix app startup script.